completed the .filter section

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
     <section id="output">
 
     </section>
+    <section id="output2">
+
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
