--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
     <section id="output2">
 
     </section>
+    <section id="output3">
+
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
