.find portion of shaping data with array methods complete

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,11 @@
     <section id="output3">
 
     </section>
+    <h2><label for="searchAgent">Agent Search</label></h2>
+    <input type="text" placeholder="Enter agent name" id="agentSearch" />
+        <section id="output4">
+    
+        </section>
     <script src="script.js"></script>
 </body>
 </html>
