practice exercise Big Spenders complete

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
         <section id="output4">
     
         </section>
+        <section id="output5">
+    
+        </section>
     <script src="script.js"></script>
 </body>
 </html>
